...
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="Order Amount"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/orderAmountEntry"
                    android:layout_width="wrap_content"
                    android:minWidth="100sp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orderAmountTitle"
                    android:digits="0123456789,."
                    android:inputType="numberDecimal"
...
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="Order Currency"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/orderCurrencyEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orderCurrencyTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:inputType="textCapCharacters"
...
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="Country"
                    android:textSize="20dp"/>

                <EditText
                    android:id="@+id/countryEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="textCapCharacters"
                    android:maxLength="2"
                    android:text="NL"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Maximum Number of Installments"
                    android:textSize="20dp"/>

                <Spinner
                    android:id="@+id/installmentsEntry"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginBottom="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/installmentsTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:entries="@array/installment_options"
                />

                <Button
                    android:id="@+id/proceed_button"
                    android:layout_width="250dp"
                    android:layout_height="62.5dp"
                    android:layout_below="@id/installmentsEntry"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
...
