...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.adyen.ui.views.CreditCardEditText
                            android:id="@+id/adyen_credit_card_no"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/creditCard_numberField_placeholder"
                            android:inputType="phone"
                            android:focusable="true"
...
                            android:layout_height="wrap_content"
                            android:text="@string/creditCard_expiryDateField_title"
                            android:id="@+id/credit_card_exp_date_label"
                            android:textSize="12sp" />

                        <com.adyen.ui.views.ExpiryDateEditText
                            android:id="@+id/adyen_credit_card_exp_date"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:hint="@string/creditCard_expiryDateField_placeholder"
                            android:layout_marginRight="15dp"
                            android:nextFocusDown="@+id/adyen_credit_card_cvc" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
                        android:text="@string/creditCard_installmentsField"
                        android:id="@+id/installments_label"
                        android:textSize="12sp" />

                    <Spinner android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/installments_spinner" />

                    <View style="@style/BoldDivider" />

                </LinearLayout>

                <RelativeLayout
...
                <com.adyen.ui.views.CheckoutButton
                    style="@style/adyenRoundCheckoutButton"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/collectCreditCardData"
                    android:enabled="false"/>

            </FrameLayout>

            <TextView
                android:textSize="20sp"
...
