...
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <com.adyen.ui.views.IBANEditText
                        android:id="@+id/adyen_sepa_iban_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sepaDirectDebit_ibanField_placeholder"
                        android:inputType="textCapCharacters|textNoSuggestions"
                        android:focusable="true"
                        android:textAllCaps="true"
...
                        android:layout_gravity="left"
                        android:text="@string/sepaDirectDebit_nameField_title"
                        android:id="@+id/card_holder_name_label"
                        android:textSize="12sp" />

                    <com.adyen.ui.views.CardHolderEditText
                        android:id="@+id/adyen_bank_account_holder_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sepaDirectDebit_nameField_placeholder"
                        android:inputType="textCapWords"
                        android:focusable="true" />

...
                        <com.adyen.ui.views.CheckoutCheckBox
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:checked="false"
                            android:id="@+id/consent_direct_debit_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_toLeftOf="@+id/consent_direct_debit_checkbox"
                            android:paddingRight="20dp"
...
                    <com.adyen.ui.views.CheckoutButton
                        style="@style/adyenRoundCheckoutButton"
                        android:padding="20dp"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/collect_direct_debit_data"
                        android:enabled="false"/>

                </FrameLayout>

                <TextView
                    android:textSize="20sp"
...
